Bug 418739 - tablet mode value is wrong in kded
Summary: tablet mode value is wrong in kded
Status: RESOLVED FIXED
Alias: None
Product: KScreen
Classification: Plasma
Component: kded (other bugs)
Version First Reported In: git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kscreen-bugs-null@kde.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-11 17:00 UTC by Bhushan Shah
Modified: 2020-03-18 01:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bhushan Shah 2020-03-11 17:00:47 UTC
As mentioned on IRC, for some reason tablet mode value is in wrong state in the kded for config, which prevents auto-rotation from working.

I've tried debugging this without much of luck. But basically,

- wayland backend sets value to true
- on rotation event it tries to read value from monitored config
- which doesn't take value set by wayland backend and defaults to false
- as a result TopUp rotation is only thing available

(all git master, FTR: kwin had tablet mode reporting broken, https://cgit.kde.org/kwin.git/commit/?id=7c5c7b5a1eba81c1df119993ac0b4bebfd7f2fcc fixes it, so make sure you have it before testing it)
Comment 1 Roman Gilg 2020-03-18 01:40:56 UTC
Git commit 6ba447e9e59da852a514101d8f2fa467c972ff8f by Roman Gilg.
Committed on 18/03/2020 at 01:44.
Pushed by romangilg into branch 'master'.

fix: transfer tablet mode properties

Summary:
I forgot to copy over the tablet-mode-available and -engaged data from one
config to the next one. Because of that the data was not available to the
daemon.

Also serialize the tablet mode properties in the Serializer. The Serializer
is not used on Wayland afaik but if at one point for example the RandR backend
gains auto rotation support we need to have it in the Serializer.

Test Plan: Manually with hard-coded tablet mode availability in KWin.

Reviewers: #plasma, bshah

Reviewed By: #plasma, bshah

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D28106

M  +2    -0    src/config.cpp
M  +10   -0    src/configserializer.cpp

https://commits.kde.org/libkscreen/6ba447e9e59da852a514101d8f2fa467c972ff8f